force-app/main/default/objects/Custom_Legal_Agreement__c/Custom_Legal_Agreement__c.object-meta.xml
<CustomObject>
    <label>Custom Legal Agreement</label>
    <nameField>
        <displayFormat>LA-{00000000}</displayFormat>
        <label>Custom Legal Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Legal Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>