force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Affiliate_Language__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Language__c</fullName>
    <label>Affiliate Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes - Named</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>