force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Agreement_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Sub_Type__c</fullName>
    <label>Agreement Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acquired Legacy</fullName>
            </value>
            <value>
                <fullName>Advanced Mapping Interface</fullName>
            </value>
            <value>
                <fullName>AMBER Alert</fullName>
            </value>
            <value>
                <fullName>Analytics Manager</fullName>
            </value>
            <value>
                <fullName>Assignment and Assumption</fullName>
            </value>
            <value>
                <fullName>Canada Enhanced Cellular Roaming</fullName>
            </value>
            <value>
                <fullName>Canadian Reseller</fullName>
            </value>
            <value>
                <fullName>Carrier Agreement</fullName>
            </value>
            <value>
                <fullName>CER</fullName>
            </value>
            <value>
                <fullName>CEV</fullName>
            </value>
            <value>
                <fullName>Change Order</fullName>
            </value>
            <value>
                <fullName>Content Delivery</fullName>
            </value>
            <value>
                <fullName>Conversion Agreements</fullName>
            </value>
            <value>
                <fullName>Co-Pilot</fullName>
            </value>
            <value>
                <fullName>CTPAT</fullName>
            </value>
            <value>
                <fullName>Data Share - No Pricing</fullName>
            </value>
            <value>
                <fullName>Data Share - Pricing</fullName>
            </value>
            <value>
                <fullName>Data Share - VLV</fullName>
            </value>
            <value>
                <fullName>Data Sharing</fullName>
            </value>
            <value>
                <fullName>DHA</fullName>
            </value>
            <value>
                <fullName>Direct Procurement</fullName>
            </value>
            <value>
                <fullName>Domestic Reseller</fullName>
            </value>
            <value>
                <fullName>Domestic Sales Agency</fullName>
            </value>
            <value>
                <fullName>Driver Email</fullName>
            </value>
            <value>
                <fullName>Driver Scorecard</fullName>
            </value>
            <value>
                <fullName>Driver Workflow</fullName>
            </value>
            <value>
                <fullName>DTTS Service (In-Cab)</fullName>
            </value>
            <value>
                <fullName>DTTS Service (Trailer)</fullName>
            </value>
            <value>
                <fullName>Engineering SOW</fullName>
            </value>
            <value>
                <fullName>Equipment and Software Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>