force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Agreement_Title__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Title__c</fullName>
    <label>Agreement Title</label>
    <length>200</length>
    <type>Text</type>
</CustomField>