force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Cap_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Cap_Percentage__c</fullName>
    <label>Cap Percentage %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>