force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Convenience_Clause__c.field-meta.xml
<CustomField>
    <fullName>Convenience_Clause__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convenience Clause</label>
    <type>Checkbox</type>
</CustomField>