force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Customer_Assignment_Rights__c.field-meta.xml
<CustomField>
    <fullName>Customer_Assignment_Rights__c</fullName>
    <label>Customer Assignment Rights</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Omnitracs consent required</fullName>
            </value>
            <value>
                <fullName>Omnitracs consent required except in event of restructure</fullName>
            </value>
            <value>
                <fullName>Omnitracs consent required, not to be unreasonably withheld</fullName>
            </value>
            <value>
                <fullName>Assignment prohibited</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>