force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Data_Policy__c.field-meta.xml
<CustomField>
    <fullName>Data_Policy__c</fullName>
    <label>Data Policy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aggregate and Anonymous</fullName>
            </value>
            <value>
                <fullName>Aggregate and Anonymous, with Exceptions</fullName>
            </value>
            <value>
                <fullName>Aggregate or Anonymous</fullName>
            </value>
            <value>
                <fullName>Aggregate or Anonymous, with Exceptions</fullName>
            </value>
            <value>
                <fullName>Cannot Share Data</fullName>
            </value>
            <value>
                <fullName>P.I.I. Removed, with Exceptions</fullName>
            </value>
            <value>
                <fullName>P.I.I. Removed</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Unrestricted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>