force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Data_Policy_Exceptions_Notes__c.field-meta.xml
<CustomField>
    <fullName>Data_Policy_Exceptions_Notes__c</fullName>
    <label>Data Policy Exceptions &amp; Notes</label>
    <type>TextArea</type>
</CustomField>