force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Equipment_Development_Obligations__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Development_Obligations__c</fullName>
    <label>Equipment Development Obligations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>