force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Future_Products_Obsolescence_Clause__c.field-meta.xml
<CustomField>
    <fullName>Future_Products_Obsolescence_Clause__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Future Products/Obsolescence Clause</label>
    <type>Checkbox</type>
</CustomField>