force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Governing_Law_Venue__c.field-meta.xml
<CustomField>
    <fullName>Governing_Law_Venue__c</fullName>
    <label>Governing Law &amp; Venue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Delaware</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Province of Ontario &amp; federal laws of Canada</fullName>
            </value>
            <value>
                <fullName>Texas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>