force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Governing_Law_Venue_Notes__c.field-meta.xml
<CustomField>
    <fullName>Governing_Law_Venue_Notes__c</fullName>
    <label>Governing Law/Venue Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>