force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Id_S2S__c.field-meta.xml
<CustomField>
    <fullName>Id_S2S__c</fullName>
    <externalId>true</externalId>
    <label>Id S2S</label>
    <length>255</length>
    <type>Text</type>
</CustomField>