force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <label>Insurance</label>
    <type>TextArea</type>
</CustomField>