force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Master_Agreement_Id_S2S__c.field-meta.xml
<CustomField>
    <fullName>Master_Agreement_Id_S2S__c</fullName>
    <label>Master Agreement Id S2S</label>
    <length>200</length>
    <type>Text</type>
</CustomField>