force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Notice_Period_in_days__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period_in_days__c</fullName>
    <label>Notice Period (in days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>