force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Omnitracs_Assignment_Rights__c.field-meta.xml
<CustomField>
    <fullName>Omnitracs_Assignment_Rights__c</fullName>
    <label>Omnitracs Assignment Rights</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No customer consent required</fullName>
            </value>
            <value>
                <fullName>Customer consent required except in event of restructure</fullName>
            </value>
            <value>
                <fullName>Customer consent required, not to be unreasonably withheld</fullName>
            </value>
            <value>
                <fullName>Customer consent required</fullName>
            </value>
            <value>
                <fullName>Assignment prohibited</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>