force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Omnitracs_Limitation_of_Liability__c.field-meta.xml
<CustomField>
    <fullName>Omnitracs_Limitation_of_Liability__c</fullName>
    <label>Omnitracs Limitation of Liability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Non-Standard</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>