force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Original_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Expiration_Date__c</fullName>
    <label>Original Expiration Date</label>
    <type>Date</type>
</CustomField>