force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Other_Non_Standard_Credits__c.field-meta.xml
<CustomField>
    <fullName>Other_Non_Standard_Credits__c</fullName>
    <label>Other Non-Standard Credits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>