force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Other_Non_Standard_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Other_Non_Standard_Discounts__c</fullName>
    <label>Other Non-Standard Discounts</label>
    <type>TextArea</type>
</CustomField>