force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Other_Non_Standard_Terms__c.field-meta.xml
<CustomField>
    <fullName>Other_Non_Standard_Terms__c</fullName>
    <label>Other Non-Standard Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>