force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Other_Shipment_Terms_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Shipment_Terms_Details__c</fullName>
    <label>Other Shipment Terms Details</label>
    <type>TextArea</type>
</CustomField>