force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Owner_Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>Owner_Notice_Date__c</fullName>
    <label>Owner Notice Date</label>
    <type>Date</type>
</CustomField>