force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Due Upon Receipt</fullName>
            </value>
            <value>
                <fullName>Net 15 Days</fullName>
            </value>
            <value>
                <fullName>Net 30 Days</fullName>
            </value>
            <value>
                <fullName>Net 45 Days</fullName>
            </value>
            <value>
                <fullName>Net 60 Days</fullName>
            </value>
            <value>
                <fullName>Net 90 Days</fullName>
            </value>
            <value>
                <fullName>No Payment Terms</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>