force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Remarketing_Rights__c.field-meta.xml
<CustomField>
    <fullName>Remarketing_Rights__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remarketing Rights</label>
    <type>Checkbox</type>
</CustomField>