force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Renewal_Term_Length_in_months__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Term_Length_in_months__c</fullName>
    <label>Renewal Term Length (in months)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>