force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Service_Development_Obligations__c.field-meta.xml
<CustomField>
    <fullName>Service_Development_Obligations__c</fullName>
    <label>Service Development Obligations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>