force-app/main/default/objects/Custom_Legal_Agreement__c/fields/SLA_Details__c.field-meta.xml
<CustomField>
    <fullName>SLA_Details__c</fullName>
    <label>SLA Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>