force-app/main/default/objects/Custom_Legal_Agreement__c/fields/SLApercentage__c.field-meta.xml
<CustomField>
    <fullName>SLApercentage__c</fullName>
    <label>SLA %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>