force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Software_Development_Obligations__c.field-meta.xml
<CustomField>
    <fullName>Software_Development_Obligations__c</fullName>
    <label>Software Development Obligations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>