force-app/main/default/objects/Custom_Legal_Agreement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>In Approval Process</fullName>
            </value>
            <value>
                <fullName>Activated</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Under negotiation</fullName>
            </value>
            <value>
                <fullName>Contract Requested</fullName>
            </value>
            <value>
                <fullName>Out for signature</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
            <value>
                <fullName>Signed by Customer</fullName>
            </value>
            <value>
                <fullName>Pending Omnitracs Signature</fullName>
            </value>
            <value>
                <fullName>Signed by Omnitracs</fullName>
            </value>
            <value>
                <fullName>Sent Back to Requester</fullName>
            </value>
            <value>
                <fullName>See Internal Notes</fullName>
            </value>
            <value>
                <fullName>Inactivated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>