force-app/main/default/objects/Custom_Legal_Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Id_S2S__c</columns>
    <columns>Account_Id_S2S__c</columns>
    <columns>Account_Legacy_Id_S2S__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>